[package]
name = "RustyTomography"
version = "0.1.0"
authors = ["Christopher Bateman <christopher.bateman@lincolnagritech.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
ndarray-linalg = "0.12.1"
image = "0.23.10"